--- a/src/landing/About/About.css
+++ b/src/landing/About/About.css
@@ -154,3 +154,24 @@
     left: -35px;
   }
 }
+@media (max-width: 768px) {
+  .about {
+    padding-block-start: 50px;
+  }
+
+  .about-img {
+    max-width: max-content;
+    margin-block-end: 0px;
+  }
+
+  .tab-item .item-icon {
+    font-size: 2rem;
+  }
+
+  .tab-text {
+    color: var(--eerie-black-2);
+    font-size: var(--fs-12);
+
+    font-weight: var(--fw-500);
+  }
+}
