--- a/src/landing/Features/Features.css
+++ b/src/landing/Features/Features.css
@@ -4,7 +4,7 @@
 
 .features {
   padding-block-start: 0;
-  margin-top: 12rem;
+  margin-top: 5rem;
   /* background-color: var(--eerie-black-1); */
 }
 
@@ -22,7 +22,7 @@
 
 .features-item .item-icon {
   color: var(--pistachio);
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin-block-start: 10px;
 }
 
@@ -66,11 +66,17 @@
   }
 }
 
-/* @media (max-width: 768px) {
- 
- 
-  .features-list,
-  .service-list {
-   grid-template-columns: 1fr 1fr;
+@media (max-width: 768px) {
+  .features {
+    margin-top: 5rem;
   }
- } */
+
+  .features-item .item-icon {
+    font-size: 2.5rem;
+    margin-block-start: 6px;
+  }
+
+  .features-item .item-text {
+    font-size: var(--fs-13);
+  }
+}
