--- a/src/landing/Hero/Hero.css
+++ b/src/landing/Hero/Hero.css
@@ -1,9 +1,7 @@
 .hero {
   background-image: url("https://res.cloudinary.com/damkols/image/upload/v1699821975/web3bridge/qnwxivop2egmonzc66v7.jpg");
-  background-color: var(--eerie-black-1);
   color: var(--white);
-  /* height: 100vh; */
-  padding: 100px 60px;
+  padding: 120px 60px;
   /* display: grid; */
   align-items: center;
 }
@@ -28,18 +26,33 @@
   margin-bottom: 30px;
 }
 
-@media (min-width: 992px) {
-  /**
-    * HERO
-    */
+span {
+  font-size: var(--fs-9);
+}
 
-  /* .hero {
-    background-image: url('../images/hero.jpg');
+@media (max-width: 768px) {
+  .hero .section-subtitle {
+    --fs: var(--fs-10);
+  }
+
+  .hero-title {
+    font-size: var(--fs-6);
+    margin: 20px 0;
+    line-height: 1.2;
+  }
+
+  .hero-text {
+    font-size: var(--fs-12);
+  }
+
+  .hero {
+    background-image: url("https://res.cloudinary.com/damkols/image/upload/v1699821975/web3bridge/qnwxivop2egmonzc66v7.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
     min-height: 780px;
-  } */
+    padding: 30px 15px;
+  }
 }
 
 @media (min-width: 1200px) {
