--- a/src/landing/About/About.css
+++ b/src/landing/About/About.css
@@ -81,7 +81,7 @@
 }
 
 .tab-text {
-  color: var(--eerie-black-2);
+  /* color: var(--eerie-black-2); */
   font-size: var(--fs-11);
 
   font-weight: var(--fw-500);
